syntax = "proto3";

package pb_database;


option go_package = "server-test/server-database/pb_database";


message FileUploadInfo {
    string filename  = 1;
    float size       = 2;
	string typefile  = 3;
	string iduser    = 4;
    string link      = 5;
    string createat  = 6;
}


message ImportFileExcel {
    string filename = 1;
    bytes content = 2 ;
}

message TemplateFilePersonInfo {
    string lastname         = 1;
    string firstname         = 2;
	string fullname         = 3;
	string phonenumber      = 4;
    string address          = 5;
}

